more modifications on AG RR